--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ RASD/Example+Of+Latex+Doc/main.fls
 RASD/Example+Of+Latex+Doc/main.aux
 RASD/Example+Of+Latex+Doc/main.fdb_latexmk
 RASD/Example+Of+Latex+Doc/main.log
+RASD/Example+Of+Latex+Doc/main.toc
+RASD/Example+Of+Latex+Doc/main.bbl
+RASD/Example+Of+Latex+Doc/main.blg
+RASD/Example+Of+Latex+Doc/main.lof
+RASD/Example+Of+Latex+Doc/main.lot
+RASD/Example+Of+Latex+Doc/main.synctex.gz
