--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ RASD/Example+Of+Latex+Doc/main.blg
 RASD/Example+Of+Latex+Doc/main.lof
 RASD/Example+Of+Latex+Doc/main.lot
 RASD/Example+Of+Latex+Doc/main.synctex.gz
+RASD/Example+Of+Latex+Doc/main.out
