--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@ RASD/Example+Of+Latex+Doc/main.lof
 RASD/Example+Of+Latex+Doc/main.lot
 RASD/Example+Of+Latex+Doc/main.synctex.gz
 RASD/Example+Of+Latex+Doc/main.out
+RASD/RASD/Images/.DS_Store
+RASD/RASD/rasd.aux
+RASD/RASD/rasd.bbl
+RASD/RASD/rasd.blg
+RASD/RASD/rasd.fdb_latexmk
+RASD/RASD/rasd.fls
+RASD/RASD/rasd.lof
+RASD/RASD/rasd.log
+RASD/RASD/rasd.lot
+RASD/RASD/rasd.out
+RASD/RASD/rasd.synctex.gz
+RASD/RASD/rasd.toc
