--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,46 @@
-
-RASD/Example+Of+Latex+Doc/main.fls
-RASD/Example+Of+Latex+Doc/main.aux
-RASD/Example+Of+Latex+Doc/main.fdb_latexmk
-RASD/Example+Of+Latex+Doc/main.log
-RASD/Example+Of+Latex+Doc/main.toc
-RASD/Example+Of+Latex+Doc/main.bbl
-RASD/Example+Of+Latex+Doc/main.blg
-RASD/Example+Of+Latex+Doc/main.lof
-RASD/Example+Of+Latex+Doc/main.lot
-RASD/Example+Of+Latex+Doc/main.synctex.gz
-RASD/Example+Of+Latex+Doc/main.out
-RASD/RASD/Images/.DS_Store
-RASD/RASD/rasd.aux
-RASD/RASD/rasd.bbl
-RASD/RASD/rasd.blg
-RASD/RASD/rasd.fdb_latexmk
-RASD/RASD/rasd.fls
-RASD/RASD/rasd.lof
-RASD/RASD/rasd.log
-RASD/RASD/rasd.lot
-RASD/RASD/rasd.out
-RASD/RASD/rasd.synctex.gz
-RASD/RASD/rasd.toc
+*.acn
+*.acr
+*.alg
+*.aux
+*.bak
+*.bbl
+*.bcf
+*.blg
+*.brf
+*.bst
+*.dvi
+*.fdb_latexmk
+*.fls
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lol
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.nav
+*.nlo
+*.nls
+*.out
+*.pdf
+*.pyg
+*.run.xml
+*.snm
+*.synctex.gz
+*.tex.backup
+*.tex~
+*.thm
+*.toc
+*.vrb
+*.xdy
+*.xml
+*blx.bib
+.bak 
+.mtc
